Fixed squished images

--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -337,3 +337,8 @@ body {
     margin-right: 1vh;
     border-radius: 5%;
 }
+
+.blog p img {
+    max-width: 100%;
+    height: auto;
+}
